# zero_dpc

./: .gitmodules  pyproject.toml
zero/: pyproject.toml  trainer.py
zero/config/: zero_test.yaml
zero/dataset/: data_convertor_episode-wise.py
zero/models/: DeocderOnlyTransformer.py  zero_test.py
zero/zero/config/: zero_test.yaml
zero/zero/dataset/: data_convertor_frame-wise.py  datasets_18_tasks.py  datasets_single_task.py
zero/zero/models/: transformer_copy.py
